--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "jquery": "~2.1.4",
     "raphael": "~2.1.4",
     "angular": "~1.4.2",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-route": "~1.4.3",
+    "angular-bootstrap": "~0.13.0"
   }
 }
