--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "directories": {
     "test": "test"
   },
-   "repository": {
-      "type": "git",
-      "url": "https://github.com/France-ioi/submission-manager.git"
-   },
-  "dependencies": {
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/France-ioi/submission-manager.git"
   },
+  "dependencies": {},
   "devDependencies": {
     "jshint": "^2.5.10",
     "gulp": "^3.8.10",
@@ -20,7 +19,6 @@
     "gulp-jshint": "^1.9.2",
     "gulp-minify-css": "^0.4.4",
     "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.1.0",
     "gulp-uglify": "^1.1.0",
     "main-bower-files": "^2.7.0",
     "jshint-stylish": "^1.0.0"
